Add calculator HTML layout
Create display and buttons for digits, operators, equal sign and clear

--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
     <title>Calculator</title>
   </head>
   <body>
+    <div class="calculator">
+      <div class="display">0</div>
+      <div class="digit" id="zero">
+        <button>0</button>
+      </div>
+      <div class="digit" id="one">
+        <button>1</button>
+      </div>
+      <div class="digit" id="two">
+        <button>2</button>
+      </div>
+      <div class="digit" id="three">
+        <button>3</button>
+      </div>
+      <div class="digit" id="four">
+        <button>4</button>
+      </div>
+      <div class="digit" id="five">
+        <button>5</button>
+      </div>
+      <div class="digit" id="six">
+        <button>6</button>
+      </div>
+      <div class="digit" id="seven">
+        <button>7</button>
+      </div>
+      <div class="digit" id="eight">
+        <button>8</button>
+      </div>
+      <div class="digit" id="nine">
+        <button>9</button>
+      </div>
+      <div class="digit" id="equal-to">
+        <button>=</button>
+      </div>
+      <div class="digit" id="clear">
+        <button>Clear</button>
+      </div>
+      <div class="operator" id="plus">
+        <button>+</button>
+      </div>
+      <div class="operator" id="minus">
+        <button>-</button>
+      </div>
+      <div class="operator" id="multiply">
+        <button>*</button>
+      </div>
+      <div class="operator" id="divide">
+        <button>/</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
