Handle digit button input
Append digits to state and update display

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <div class="digit" id="nine">
         <button>9</button>
       </div>
-      <div class="digit" id="equal-to">
+      <div class="equal-to">
         <button>=</button>
       </div>
-      <div class="digit" id="clear">
+      <div class="clear">
         <button>Clear</button>
       </div>
       <div class="operator" id="plus">
