Add decimal button
Edit the HTML structure to add the HTML button along with the digits and the operators

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
       <div class="operator" id="divide">
         <button>/</button>
       </div>
+      <div class="decimal">
+        <button>.</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
