Add the backspace button
Edit the HTML structure to add the backspace button

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <div class="decimal">
         <button>.</button>
       </div>
+      <div class="backspace">
+        <button>Back</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
