Refactor calculator markup into row-based flex layout
Align buttons into proper calculator rows

--- a/index.html
+++ b/index.html
@@ -9,61 +9,70 @@
   <body>
     <div class="calculator">
       <div class="display">0</div>
-      <div class="digit" id="zero">
-        <button>0</button>
+      <div class="row">
+        <div class="clear">
+          <button>AC</button>
+        </div>
+        <div class="operator" id="multiply">
+          <button>*</button>
+        </div>
+        <div class="operator" id="divide">
+          <button>/</button>
+        </div>
+        <div class="backspace">
+          <button>Back</button>
+        </div>
       </div>
-      <div class="digit" id="one">
-        <button>1</button>
+      <div class="row">
+        <div class="digit" id="seven">
+          <button>7</button>
+        </div>
+        <div class="digit" id="eight">
+          <button>8</button>
+        </div>
+        <div class="digit" id="nine">
+          <button>9</button>
+        </div>
+        <div class="operator" id="minus">
+          <button>-</button>
+        </div>
       </div>
-      <div class="digit" id="two">
-        <button>2</button>
+      <div class="row">
+        <div class="digit" id="four">
+          <button>4</button>
+        </div>
+        <div class="digit" id="five">
+          <button>5</button>
+        </div>
+        <div class="digit" id="six">
+          <button>6</button>
+        </div>
+        <div class="operator" id="plus">
+          <button>+</button>
+        </div>
       </div>
-      <div class="digit" id="three">
-        <button>3</button>
+      <div class="row">
+        <div class="digit" id="one">
+          <button>1</button>
+        </div>
+        <div class="digit" id="two">
+          <button>2</button>
+        </div>
+        <div class="digit" id="three">
+          <button>3</button>
+        </div>
+        <div class="equal-to">
+          <button>=</button>
+        </div>
       </div>
-      <div class="digit" id="four">
-        <button>4</button>
+      <div class="row">
+        <div class="digit" id="zero">
+          <button>0</button>
+        </div>
+        <div class="decimal">
+          <button>.</button>
+        </div>
       </div>
-      <div class="digit" id="five">
-        <button>5</button>
-      </div>
-      <div class="digit" id="six">
-        <button>6</button>
-      </div>
-      <div class="digit" id="seven">
-        <button>7</button>
-      </div>
-      <div class="digit" id="eight">
-        <button>8</button>
-      </div>
-      <div class="digit" id="nine">
-        <button>9</button>
-      </div>
-      <div class="equal-to">
-        <button>=</button>
-      </div>
-      <div class="clear">
-        <button>Clear</button>
-      </div>
-      <div class="operator" id="plus">
-        <button>+</button>
-      </div>
-      <div class="operator" id="minus">
-        <button>-</button>
-      </div>
-      <div class="operator" id="multiply">
-        <button>*</button>
-      </div>
-      <div class="operator" id="divide">
-        <button>/</button>
-      </div>
-      <div class="decimal">
-        <button>.</button>
-      </div>
-      <div class="backspace">
-        <button>Back</button>
-      </div>
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
